MC-243 Rakshak Monthly report (client-side)

--- a/NexGenRedAlert/NexGenRedAlert/Views/MenuPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/MenuPage.xaml
@@ -21,6 +21,7 @@
                     <Button x:Name="SvpButton" Text="Svp Form" Clicked="OpenSvpFormPage" />
                     <Button x:Name="RevisitButton" Text="Revisit Form" Clicked="OpenRevisitFormPage" />
                     <Button x:Name="RakshakRegistrationButton" Text="Rakshak Registration" Clicked="OpenRakshakRegistrationPage" />
+                    <Button x:Name="RakshakMonthlyReportButton" Text="Rakshak Monthly Report" Clicked="OpenRakshakMonthlyReportPage" />
                 </StackLayout>
             
                 <StackLayout x:Name="QCFormsLayout" VerticalOptions="Start" Margin="20,0,20,0" IsVisible="{Binding IsQCFormsLayoutVisible}">
